mfe-system-auth/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mfe-system-auth
  labels:
    app: mfe-system-auth
spec:
  selector:
    app: mfe-system-auth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
